# RingLedger

./: .gitignore  .gitleaks.toml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-cd.yml
backend/: README.md  alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 202602220000_baseline_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  bouts.py  dependencies.py  router.py
backend/app/core/: config.py  security.py
backend/app/crypto_conditions/: __init__.py  fulfillment.py
backend/app/db/: init_db.py  session.py  uow.py
backend/app/domain/: money.py  time_rules.py
backend/app/integrations/: __init__.py  xaman_service.py
backend/app/middleware/: __init__.py  idempotency.py
backend/app/models/: __init__.py  audit_log.py  bout.py  enums.py  escrow.py  fighter_profile.py  idempotency_key.py  user.py
backend/app/repositories/: __init__.py  audit_log_repository.py  bout_repository.py  (+2 more)
backend/sql/: 001_init_schema.sql
docs/: alembic-adoption-plan.md  api-spec.md  auth-library-adoption-plan.md  ci-cd.md  clean-architecture-refactor-plan.md  m3.6-modernization-acceptance-memo.md  operational-flow.md  operations-runbook.md  performance-regression-gates.md  requirements-matrix.md  schema-doc.md  state-machines.md  traceability-matrix.md  xaman-signing-contract.md
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: promoter-flow.spec.ts
frontend/src/: App.test.tsx  App.tsx  auth.ts  constants.ts  flow-utils.ts  styles.css
(+69 files in other folders)
