[project]
name = "fightpurse-ringledger"
version = "0.1.0"
description = "FightPurse MVP backend and platform workspace."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.1.19",
  "pydantic>=2.7.0",
  "passlib>=1.7.4",
  "PyJWT>=2.9.0",
  "email-validator>=2.2.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "hypothesis>=6.103.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
